<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/nav_backup" />
        <item
            android:id="@+id/nav_dark_mode"
            android:icon="@drawable/ic_dark_mode"
            android:title="@string/dark_mode"
            app:actionLayout="@layout/layout_menu_switch"
            xmlns:app="http://schemas.android.com/apk/res-auto" />
    </group>
</menu>
